fix(cicd): prod test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,28 +114,7 @@ jobs:
 
 # Workflows
 workflows:
-  staging:
-    jobs:
-      - validate_infrastructure:
-          filters:
-            branches:
-              only: feat/cicd
-      - approve:
-          description: "Approve"
-          type: approval
-          requires:
-            - validate_infrastructure
-      - apply_infrastructure:
-          requires:
-            - approve
-      # - build_and_push_docker_image:
-      #     requires:
-      #       - apply_infrastructure
-      - deploy_to_staging:
-          requires:
-            - apply_infrastructure
-
-  # production:
+  # staging:
   #   jobs:
   #     - validate_infrastructure:
   #         filters:
@@ -149,8 +128,29 @@ workflows:
   #     - apply_infrastructure:
   #         requires:
   #           - approve
-  #         sub_domain: "chain"
-  #         deployment_environment: "production"
-  #     - deploy_to_production:
+  #     # - build_and_push_docker_image:
+  #     #     requires:
+  #     #       - apply_infrastructure
+  #     - deploy_to_staging:
   #         requires:
   #           - apply_infrastructure
+
+  production:
+    jobs:
+      - validate_infrastructure:
+          filters:
+            branches:
+              only: feat/cicd
+      - approve:
+          description: "Approve"
+          type: approval
+          requires:
+            - validate_infrastructure
+      - apply_infrastructure:
+          requires:
+            - approve
+          sub_domain: "chain"
+          deployment_environment: "production"
+      - deploy_to_production:
+          requires:
+            - apply_infrastructure
