--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -151,6 +151,8 @@ workflows:
             - approve
           sub_domain: "chain"
           deployment_environment: "production"
+          context: jur-node-production
       - deploy_to_production:
           requires:
             - apply_infrastructure
+          context: jur-node-production
