--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,13 +43,7 @@ commands:
             gcloud --quiet compute scp --recurse ./deployment/ circleci@<< parameters.instance >>:. --zone=<< parameters.zone >>
             gcloud --quiet compute scp --recurse ./res/ circleci@<< parameters.instance >>:. --zone=<< parameters.zone >>
             gcloud --quiet compute ssh  circleci@<< parameters.instance >> --command "chmod +x ./deployment/deploy.sh" --zone << parameters.zone >>
-            gcloud --quiet compute ssh  circleci@<< parameters.instance >> --command "sudo ./deployment/deploy.sh \
-            $INSTANCE_1_AURA_KEY \
-            $INSTANCE_1_GRANPA_KEY \
-            $INSTANCE_2_AURA_KEY \
-            $INSTANCE_2_GRANPA_KEY \
-            $INSTANCE_3_AURA_KEY \
-            $INSTANCE_3_GRANPA_KEY" --zone << parameters.zone >>
+            gcloud --quiet compute ssh  circleci@<< parameters.instance >> --command "sudo ./deployment/deploy.sh $INSTANCE_1_AURA_KEY $INSTANCE_1_GRANPA_KEY $INSTANCE_2_AURA_KEY $INSTANCE_2_GRANPA_KEY $INSTANCE_3_AURA_KEY $INSTANCE_3_GRANPA_KEY" --zone << parameters.zone >>
 
 # Jobs
 jobs:
