--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,24 @@ commands:
       - run:
           name: Install latest terraform
           command: wget -nv https://releases.hashicorp.com/terraform/1.4.5/terraform_1.4.5_linux_amd64.zip && unzip terraform_1.4.5_linux_amd64.zip && mv terraform /usr/local/bin && terraform -v
+
+  extract_bootnode_id:
+    description: "Extract and set bootnode id"
+    parameters:
+      bootnode_instance:
+        type: string
+      peernode_instance:
+        type: string
+      zone:
+        type: string
+        default: us-central1-a
+    steps:
+      - run:
+          name: Extract bootnode id and set it to peernode
+          command: |
+            gcloud --quiet compute scp circleci@<< parameters.bootnode_instance >>:./deployment/bootnode_id.txt ./deployment/bootnode_id.txt  --zone=<< parameters.zone >>
+            gcloud --quiet compute scp ./deployment/bootnode_id.txt circleci@<< parameters.peernode_instance >>:./deployment/bootnode_id.txt --zone=<< parameters.zone >>
+
   run-deploy-sh:
     description: "Deploy Docker to GCP CE instance"
     parameters:
@@ -23,18 +41,6 @@ commands:
         type: string
         default: us-central1-a
     steps:
-      - checkout
-      - gcp-cli/install
-      - gcp-cli/initialize
-      # - run:
-      #     name: Export ENV variables
-      #     command: |
-      #       gcloud --quiet compute ssh  circleci@<< parameters.instance >> --command "echo INSTANCE_1_AURA_KEY=$INSTANCE_1_AURA_KEY >> .bashrc" --zone << parameters.zone >>
-      #       gcloud --quiet compute ssh  circleci@<< parameters.instance >> --command "echo INSTANCE_2_AURA_KEY=$INSTANCE_2_AURA_KEY >> .bashrc" --zone << parameters.zone >>
-      #       gcloud --quiet compute ssh  circleci@<< parameters.instance >> --command "echo INSTANCE_3_AURA_KEY=$INSTANCE_3_AURA_KEY >> .bashrc" --zone << parameters.zone >>
-      #       gcloud --quiet compute ssh  circleci@<< parameters.instance >> --command "echo INSTANCE_1_GRANPA_KEY=$INSTANCE_1_GRANPA_KEY >> .bashrc" --zone << parameters.zone >>
-      #       gcloud --quiet compute ssh  circleci@<< parameters.instance >> --command "echo INSTANCE_2_GRANPA_KEY=$INSTANCE_2_GRANPA_KEY >> .bashrc" --zone << parameters.zone >>
-      #       gcloud --quiet compute ssh  circleci@<< parameters.instance >> --command "echo INSTANCE_3_GRANPA_KEY=$INSTANCE_3_GRANPA_KEY >> .bashrc" --zone << parameters.zone >>
       - run:
           name: Prepare SSH metadata for GCP 🦌
           command: |
@@ -100,26 +106,32 @@ jobs:
       - gcp-gcr/push-image:
           image: jur-node
           registry-url: us.gcr.io
-  deploy_to_staging:
+  deploy:
+    parameters:
+      instance_1:
+        type: string
+      instance_2:
+        type: string
+      instance_3:
+        type: string
     docker:
       - image: google/cloud-sdk
     steps:
+      - checkout
+      - gcp-cli/install
+      - gcp-cli/initialize
       - run-deploy-sh:
-          instance: staging-l1-jur-node-archive-compute-instance-us-central1-a-1
+          instance: << parameters.instance_1 >>
+      - extract_bootnode_id:
+          bootnode_instance: << parameters.instance_1 >>
+          peernode_instance: << parameters.instance_2 >>
       - run-deploy-sh:
-          instance: staging-l1-jur-node-compute-instance-us-central1-a-2
+          instance: << parameters.instance_2 >>
+      - extract_bootnode_id:
+          bootnode_instance: << parameters.instance_1 >>
+          peernode_instance: << parameters.instance_3 >>
       - run-deploy-sh:
-          instance: staging-l1-jur-node-compute-instance-us-central1-a-3
-  deploy_to_production:
-    docker:
-      - image: google/cloud-sdk
-    steps:
-      - run-deploy-sh:
-          instance: production-l1-jur-node-archive-compute-instance-us-central1-a-1
-      - run-deploy-sh:
-          instance: production-l1-jur-node-compute-instance-us-central1-a-2
-      - run-deploy-sh:
-          instance: production-l1-jur-node-compute-instance-us-central1-a-3
+          instance: << parameters.instance_3 >>
 
 # Workflows
 workflows:
@@ -140,9 +152,13 @@ workflows:
   #     # - build_and_push_docker_image:
   #     #     requires:
   #     #       - apply_infrastructure
-  #     - deploy_to_staging:
+  #     - deploy:
   #         requires:
   #           - apply_infrastructure
+  #         context: jur-node-staging
+  #         instance_1: "staging-l1-jur-node-archive-compute-instance-us-central1-a-1"
+  #         instance_2: "staging-l1-jur-node-compute-instance-us-central1-a-2"
+  #         instance_3: "staging-l1-jur-node-compute-instance-us-central1-a-3"
 
   production:
     jobs:
@@ -161,7 +177,10 @@ workflows:
           sub_domain: "chain"
           deployment_environment: "production"
           context: jur-node-production
-      - deploy_to_production:
+      - deploy:
           requires:
             - apply_infrastructure
           context: jur-node-production
+          instance_1: "staging-l1-jur-node-archive-compute-instance-us-central1-a-1"
+          instance_2: "staging-l1-jur-node-compute-instance-us-central1-a-2"
+          instance_3: "staging-l1-jur-node-compute-instance-us-central1-a-3"
