--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,12 +108,7 @@ jobs:
           registry-url: us.gcr.io
   deploy:
     parameters:
-      instance_1:
-        type: string
-      instance_2:
-        type: string
-      instance_3:
-        type: string
+      deployment_environment:
     docker:
       - image: google/cloud-sdk
     steps:
@@ -121,17 +116,17 @@ jobs:
       - gcp-cli/install
       - gcp-cli/initialize
       - run-deploy-sh:
-          instance: << parameters.instance_1 >>
+          instance: << parameters.deployment_environment >>-l1-jur-node-archive-compute-instance-us-central1-a-1
       - extract_bootnode_id:
-          bootnode_instance: << parameters.instance_1 >>
-          peernode_instance: << parameters.instance_2 >>
+          bootnode_instance: << parameters.deployment_environment >>-l1-jur-node-archive-compute-instance-us-central1-a-1
+          peernode_instance: << parameters.deployment_environment >>-l1-jur-node-compute-instance-us-central1-a-2
       - run-deploy-sh:
-          instance: << parameters.instance_2 >>
+          instance: << parameters.deployment_environment >>-l1-jur-node-compute-instance-us-central1-a-2
       - extract_bootnode_id:
-          bootnode_instance: << parameters.instance_1 >>
-          peernode_instance: << parameters.instance_3 >>
+          bootnode_instance: << parameters.deployment_environment >>-l1-jur-node-archive-compute-instance-us-central1-a-1
+          peernode_instance: << parameters.deployment_environment >>-l1-jur-node-compute-instance-us-central1-a-3
       - run-deploy-sh:
-          instance: << parameters.instance_3 >>
+          instance: << parameters.deployment_environment >>-l1-jur-node-compute-instance-us-central1-a-3
 
 # Workflows
 workflows:
@@ -156,9 +151,7 @@ workflows:
   #         requires:
   #           - apply_infrastructure
   #         context: jur-node-staging
-  #         instance_1: "staging-l1-jur-node-archive-compute-instance-us-central1-a-1"
-  #         instance_2: "staging-l1-jur-node-compute-instance-us-central1-a-2"
-  #         instance_3: "staging-l1-jur-node-compute-instance-us-central1-a-3"
+  #         deployment_environment: "production"
 
   production:
     jobs:
@@ -181,6 +174,4 @@ workflows:
           requires:
             - apply_infrastructure
           context: jur-node-production
-          instance_1: "production-l1-jur-node-archive-compute-instance-us-central1-a-1"
-          instance_2: "production-l1-jur-node-compute-instance-us-central1-a-2"
-          instance_3: "production-l1-jur-node-compute-instance-us-central1-a-3"
+          deployment_environment: "production"
