--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,6 +109,7 @@ jobs:
   deploy:
     parameters:
       deployment_environment:
+        type: string
     docker:
       - image: google/cloud-sdk
     steps:
