--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ commands:
           name: Extract bootnode id and set it to peernode
           command: |
             gcloud --quiet compute scp circleci@<< parameters.bootnode_instance >>:./deployment/bootnode_id.txt ./deployment/bootnode_id.txt  --zone=<< parameters.zone >>
-            gcloud --quiet compute ssh  circleci@<< parameters.peernode_instance >> --command "test -d deployment || mkdir -p deployment" --zone << parameters.zone >>
+            gcloud --quiet compute ssh  circleci@<< parameters.peernode_instance >> --command "mkdir -p ./deployment" --zone << parameters.zone >>
             gcloud --quiet compute scp ./deployment/bootnode_id.txt circleci@<< parameters.peernode_instance >>:./deployment --zone=<< parameters.zone >>
 
   run-deploy-sh:
@@ -166,14 +166,14 @@ workflows:
       #     type: approval
       #     requires:
       #       - validate_infrastructure
-      - apply_infrastructure:
-          # requires:
-          #   - approve
-          sub_domain: "chain"
-          deployment_environment: "production"
-          context: jur-node-production
+      # - apply_infrastructure:
+      #     # requires:
+      #     #   - approve
+      #     sub_domain: "chain"
+      #     deployment_environment: "production"
+      #     context: jur-node-production
       - deploy:
-          requires:
-            - apply_infrastructure
+          # requires:
+          #   - apply_infrastructure
           context: jur-node-production
           deployment_environment: "production"
