--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,14 +27,14 @@ commands:
         default: us-central1-a
     steps:
       - run:
-          name: Extract bootnode id and set it to peernode
+          name: Extract Jur Node bootnode id and set it to << parameters.peernode_instance >>
           command: |
             gcloud --quiet compute scp circleci@<< parameters.bootnode_instance >>:./deployment/bootnode_id.txt ./deployment/bootnode_id.txt  --zone=<< parameters.zone >>
             gcloud --quiet compute ssh  circleci@<< parameters.peernode_instance >> --command "rm -frd ./deployment && mkdir -p ./deployment" --zone << parameters.zone >>
             gcloud --quiet compute scp ./deployment/bootnode_id.txt circleci@<< parameters.peernode_instance >>:./deployment --zone=<< parameters.zone >>
 
   run-deploy-sh:
-    description: "Deploy Docker to << parameters.instance >>"
+    description: "Deploy Docker to GCP CE instance"
     parameters:
       instance:
         type: string
@@ -166,14 +166,14 @@ workflows:
       #     type: approval
       #     requires:
       #       - validate_infrastructure
-      # - apply_infrastructure:
-      #     # requires:
-      #     #   - approve
-      #     sub_domain: "chain"
-      #     deployment_environment: "production"
-      #     context: jur-node-production
-      - deploy:
+      - apply_infrastructure:
           # requires:
-          #   - apply_infrastructure
+          #   - approve
+          sub_domain: "chain"
+          deployment_environment: "production"
+          context: jur-node-production
+      - deploy:
+          requires:
+            - apply_infrastructure
           context: jur-node-production
           deployment_environment: "production"
