--- a/deployment/docker-compose-testnet.yml
+++ b/deployment/docker-compose-testnet.yml
@@ -16,6 +16,8 @@ services:
     image: us.gcr.io/layer1-mvp/jur-node:latest
     command: ./start-jur-node.sh
     working_dir: /jur-node-config
+    ports:
+      - 30333:30333
     environment:
       - AURA_KEY=$AURA_KEY
       - GRANPA_KEY=$GRANPA_KEY
