--- a/deployment/docker-compose-testnet.yml
+++ b/deployment/docker-compose-testnet.yml
@@ -23,7 +23,7 @@ services:
       - GRANPA_KEY=$GRANPA_KEY
       - BOOT_NODE=$BOOT_NODE
       - BOOT_NODE_IP=$BOOT_NODE_IP
-      - BOOT_NODE_ID=$BOOT_NODE_ID
+      - BOOT_NODE_ID=$(head -n 1 ./bootnode_id.txt)
     volumes:
       - ${PWD}/../res/jurTestnetSpecRaw.json:/jur-node-config/spec.json
       - ${PWD}/start-jur-node.sh:/jur-node-config/start-jur-node.sh
