--- a/deployment/docker-compose-mainnet.yml
+++ b/deployment/docker-compose-mainnet.yml
@@ -23,7 +23,7 @@ services:
       - GRANPA_KEY=$GRANPA_KEY
       - BOOT_NODE=$BOOT_NODE
       - BOOT_NODE_IP=$BOOT_NODE_IP
-      - BOOT_NODE_ID=$(head -n 1 ./bootnode_id.txt)
+      - BOOT_NODE_ID=$(cat ./bootnode_id.txt | head -n 1)
     volumes:
       - ${PWD}/../res/jurMainnetSpecRaw.json:/jur-node-config/spec.json
       - ${PWD}/start-jur-node.sh:/jur-node-config/start-jur-node.sh
