Added proposal pallet

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -49,6 +49,7 @@ hex-literal = "0.3.4"
 # Local Dependencies
 pallet-token-swap = { version = "0.1.0", default-features = false, path = "../pallets/token-swap" }
 pallet-community = { version = "0.1.0", default-features = false, path = "../pallets/community" }
+pallet-proposal = { version = "0.1.0", default-features = false, path = "../pallets/proposal" }
 
 primitives = { package = 'jur-primitives', path = '../primitives', default-features = false }
 
@@ -93,6 +94,7 @@ std = [
 	"primitives/std",
 	"sp-consensus-grandpa/std",
 	"pallet-community/std",
+	"pallet-proposal/std",
 ]
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
@@ -104,6 +106,7 @@ runtime-benchmarks = [
 	"sp-runtime/runtime-benchmarks",
 	"pallet-token-swap/runtime-benchmarks",
 	"pallet-community/runtime-benchmarks",
+	"pallet-proposal/runtime-benchmarks",
 ]
 try-runtime = [
 	"frame-executive/try-runtime",
@@ -117,4 +120,5 @@ try-runtime = [
 	"pallet-multisig/try-runtime",
 	"pallet-token-swap/try-runtime",
 	"pallet-community/try-runtime",
+	"pallet-proposal/try-runtime",
 ]
