Added passport pallet

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -50,6 +50,7 @@ hex-literal = "0.3.4"
 pallet-token-swap = { version = "0.1.0", default-features = false, path = "../pallets/token-swap" }
 pallet-community = { version = "0.1.0", default-features = false, path = "../pallets/community" }
 pallet-proposal = { version = "0.1.0", default-features = false, path = "../pallets/proposal" }
+pallet-passport = { version = "0.1.0", default-features = false, path = "../pallets/passport" }
 
 primitives = { package = 'jur-primitives', path = '../primitives', default-features = false }
 
@@ -95,6 +96,7 @@ std = [
 	"sp-consensus-grandpa/std",
 	"pallet-community/std",
 	"pallet-proposal/std",
+	"pallet-passport/std",
 ]
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
@@ -107,6 +109,7 @@ runtime-benchmarks = [
 	"pallet-token-swap/runtime-benchmarks",
 	"pallet-community/runtime-benchmarks",
 	"pallet-proposal/runtime-benchmarks",
+	"pallet-passport/runtime-benchmarks"
 ]
 try-runtime = [
 	"frame-executive/try-runtime",
@@ -121,4 +124,5 @@ try-runtime = [
 	"pallet-token-swap/try-runtime",
 	"pallet-community/try-runtime",
 	"pallet-proposal/try-runtime",
+	"pallet-passport/try-runtime"
 ]
