fix(cicd): updated validating zipfile

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,16 +11,20 @@ commands:
   install_latest_terraform:
     description: "Install latest terraform"
     steps:
-      - run: sudo apt-get update
-      - run: sudo apt-get install -y gnupg
       - run:
           name: Install latest terraform
           command: |
             VER=1.4.5 ZIPFILE="terraform_${VER}_linux_amd64.zip" SUMFILE="terraform_${VER}_SHA256SUMS" \
             SIGFILE="${SUMFILE}.sig"; for fn in "${ZIPFILE}" "${SUMFILE}" "${SIGFILE}" ; do \
             wget -nv https://releases.hashicorp.com/terraform/${VER}/${fn}; done; \
-            gpg --receive-keys 374EC75B485913604A831CC7C820C6D5CD27AB87 && \
-            sha256sum -c --ignore-missing ${SUMFILE} && gpg --verify ${SIGFILE} ${SUMFILE} && \
+            expected_sha=$(cat "${SUMFILE}" | grep "${ZIPFILE}" | awk '{print $1}') \
+            export -f checksumCommand \
+            download_sha=$(checksumCommand "${ZIPFILE}") \
+            echo "Validating download..." \
+            if [ "$expected_sha" != "$download_sha" ]; then
+              echo "Expected SHA256SUM does not match downloaded file, exiting."
+              exit 1
+            fi
             unzip "${ZIPFILE}" && mv terraform /usr/local/bin && terraform -v
 
   extract_bootnode_id:
